apps/staging/kan/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: traefik
  rules:
    - host: tasks-storage.barina.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - tasks-storage.barina.tech
      secretName: tasks-storage-tls-secret
